WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282499
[WebGPU] Texture::bytesPerRow does not handle textureWidth which are not divisible by the blockWidth
https://bugs.webkit.org/show_bug.cgi?id=282499
Summary
[WebGPU] Texture::bytesPerRow does not handle textureWidth which are not divi...
Mike Wyrzykowski
Reported
2024-11-02 17:58:40 PDT
[WebGPU] Texture::bytesPerRow does not handle textureWidth which are not divisible by the blockWidth
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-11-02 17:59:08 PDT
rdar://138789129
Mike Wyrzykowski
Comment 2
2024-11-02 20:51:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36102
EWS
Comment 3
2024-11-04 09:52:48 PST
Committed
286096@main
(df86c2df8b08): <
https://commits.webkit.org/286096@main
> Reviewed commits have been landed. Closing PR #36102 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug