[WebGPU] Texture::bytesPerRow does not handle textureWidth which are not divisible by the blockWidth https://bugs.webkit.org/show_bug.cgi?id=282499 rdar://138789129

Reviewed by Tadeu Zagallo.

Instead of returning zero, add one to the required bytesPerRow when it is
not a multiple of the block size, as Metal expects this.

* LayoutTests/fast/webgpu/nocrash/fuzz-282499-expected.html: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-282499-expected.txt: Added.
Add regression test.

* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::bytesPerRow):

Canonical link: https://commits.webkit.org/286096@main